--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andrea Corriga (@AsoStrife) &bull; Ph.D and Software Engineer</title>
+    <title>Andrea Corriga (@AsoStrife) &bull; Ph.D. and Software Engineer</title>
 
-    
+    <link rel="sitemap" href="/sitemap.xml" type="application/xml" />
+    <link rel="canonical" href="https://andreacorriga.com"/>
+
   </head>
   <body>
     <div id="app"></div>
