Added gallery and defaults meta tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="image_src" href="/img/profile/andrea-corriga-asostrife-profile-image-200x200.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="/img/favicon/favicon.ico"/>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +16,24 @@
 
     <link rel="sitemap" href="/sitemap.xml" type="application/xml" />
     <link rel="canonical" href="https://andreacorriga.com"/>
+
+    <meta name="description" content="Andrea Corriga is a Ph.D and Software Engineer currently living in Sardinia, Italy. Passionate about sport, music, video games and programming he can be found in all social networks or video games with the username AsoStrife.">
+	<meta name="author" content="Andrea Corriga (@AsoStrife)">	
+	<meta name="keywords" lang="en" content="Andrea, Corriga, Aso, AsoStrife, Cloud, CloudAso, Microsoft, Student, Partner, MSP, Portfolio, Personal Website, Webmaster, Web, Developer, PHP, Javascript, Java, Keras, Vue, Crypto, Coin, Tensorflow, Strapi,  Python, Streamer, Twitch, University, Master, Graduate, Computer Science, Coding">
+	<meta name="robots" content="index, follow" />
+	<meta name="language" content="en" />
+    <meta name="rating" content="general" />
+
+    <link rel="sitemap" href="/sitemap.xml" type="application/xml" />
+
+    <!--Facebook OpenGraph-->
+    <meta property="fb:app_id" content="2210608369160877" />
+    <meta property="og:type" content="profile" />
+    <meta property="og:url" content="https://andreacorriga.com/" />
+    <meta property="og:title" content="Andrea Corriga (@AsoStrife) &bull; PhD Student and Software Developer" />
+    <meta property="og:image" content="/img/profile/andrea-corriga-asostrife-profile-image-200x200.png" />
+    <meta property="og:description" content="Andrea Corriga is a Ph.D and Software Engineer currently living in Sardinia, Italy. Passionate about sport, music, video games and programming he can be found in all social networks or video games with the username AsoStrife." />
+
 
   </head>
   <body>
