Fix og:title for facebook

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <meta property="fb:app_id" content="2210608369160877" />
         <meta property="og:type" content="profile" />
         <meta property="og:url" content="https://andreacorriga.com/" />
-        <meta property="og:title" content="Andrea Corriga (@AsoStrife) &bull; PhD Student and Software Developer" />
+        <meta property="og:title" content="Andrea Corriga (@AsoStrife) &bull; Ph.D. and Software Engineer" />
         <meta property="og:image" content="/img/profile/andrea-corriga-asostrife-profile-image-200x200.png" />
         <meta property="og:description" content="Andrea Corriga is a Ph.D. and Software Engineer currently living in Sardinia, Italy. Passionate about sport, music, video games and programming he can be found in all social networks or video games with the username AsoStrife." />
   </head>
