--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
     <!-- Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126308165-1"></script>
 	<script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
@@ -48,6 +49,8 @@
 
         gtag('config', 'UA-126308165-1');
 	</script>
+
+
 
   </body>
 </html>
