--- a/index.html
+++ b/index.html
@@ -39,16 +39,15 @@
     <script type="module" src="/src/main.js"></script>
     <script type="module" src="/src/assets/js/fontawesome-all.min.js"></script>
 
-    <!-- Analytics -->
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126308165-1"></script>
-	<script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2YXJPV5HWX"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-        gtag('config', 'UA-126308165-1');
-	</script>
+    gtag('config', 'G-2YXJPV5HWX');
+    </script>
 
 
 
